--- a/index.html
+++ b/index.html
@@ -259,6 +259,8 @@
 								</fieldset>
 							</form>
 						</div>
+						<div data-role="popup" id="wordDetails" data-position-to="window">
+						</div>
 						<div data-role="popup" id="about" data-position-to="window">
 							<h2>The Scriptures in JavaScript</h2>
 							<div data-role="collapsible-set">
