various bug fixes

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 					<a href="#gotoForm" data-role="button" data-rel="popup" data-transition="slidedown" data-icon="book" class="desktop-button" id="keyCode169">Go to</a>
 					<a href="#grammar" data-role="button" data-icon="info">Grammar</a>
 					<a href="#options" data-role="button" data-icon="gear" data-rel="popup" data-transition="slidedown">Options</a>
+					<a href="#help" data-role="button" data-icon="info" data-rel="popup" data-transition="slidedown">Help</a>
 				</div>
 				<div data-role="navbar" class="mobile-button">
 					<ul>
@@ -406,6 +407,17 @@
 				</div>
 			</div>
 		</div><!-- /page -->
+	
+		<div data-role="page" id="help">
+			<div data-role="header">
+				<a data-rel="back" data-role="button" data-icon="arrow-l">Back</a>
+				<h1>Help</h1>
+			</div>
+			<div data-role="content">
+				Tap and hold to see more details on a word
+			</div>
+		</div><!-- /page -->
+
 		<div data-role="page" id="grammar">
 			<div data-role="header">
 				<a data-rel="back" data-role="button" data-icon="arrow-l">Back</a>
