--- a/index.html
+++ b/index.html
@@ -108,8 +108,10 @@
 										<label for="range_word">Word</label>
 										<input type="radio" name="range" id="range_verse" value="verse" />
 										<label for="range_verse">Verse</label>
-										<input type="radio" name="range" id="range_chapter" value="greek" />
+										<input type="radio" name="range" id="range_chapter" value="chapter" />
 										<label for="range_chapter">Chapter</label>
+										<input type="radio" name="range" id="range_book" value="book" />
+										<label for="range_chapter">Book</label>
 									</fieldset>
 								</div>
 
