lots of fixes. worst commit message ever

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
 							<form action="#search" method="get" class="search">
 								<fieldset>
 									<label><input type="checkbox" name="original" checked />Show original language?</label>
+									<label id="literalTranslation"><input type="checkbox" name="literalTranslation"/>Use literal consistent translation?</label>
 								</fieldset>
 							</form>
 						</div>
