making the color of the word details match the color in the sidebar

--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
 									<label for="morph">Morphology</label>
 									<input type="text" name="morph" id="morph" value="" placeholder="Morphology" />
 								</div>
+								
+								<div data-role="fieldcontain">
+									<fieldset data-role="controlgroup" class="ui-hide-label">
+										<legend>Combine terms?</legend>
+										<input type="checkbox" name="combineTerms" id="combineTerms" class="custom" />
+										<label for="combineTerms">Combine terms?</label>
+									</fieldset>
+								</div>
 
 								<div data-role="fieldcontain">
 									<label for="searchFor">Search for:</label>
