adding cross reference data and making changes to the ReferenceView

--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
 									<% _.each( reference.english, function( word ) { %>
 									
 										<span
-											class="<%= word.class %>"
+											class="<%= word.className %>"
 											title="<%= word.title %>"
 											data-word="<%= word.word %>"
 											data-lemma="<%= word.lemma %>"
