fix anchoring when adding/removing reference - needs refactoring

--- a/index.html
+++ b/index.html
@@ -491,6 +491,7 @@
 		      </div><!-- /content -->
 		
 		</div>
+		<input type="hidden" id="stopBackbone" />
 		<!-- Underscore Template that is used to display all of the Category Models -->
 		<script id="categoryItems" type="text/template">
 			<% _.each( collection.chapters, function( chapter ) { %>
