dirty hack to stop scrolling from firing a million events

--- a/index.html
+++ b/index.html
@@ -492,6 +492,8 @@
 		
 		</div>
 		<input type="hidden" id="stopBackbone" />
+		<input type="hidden" id="hashDelay" />
+
 		<!-- Underscore Template that is used to display all of the Category Models -->
 		<script id="categoryItems" type="text/template">
 			<% _.each( collection.chapters, function( chapter ) { %>
