--- a/index.html
+++ b/index.html
@@ -522,9 +522,7 @@
 												data-range="<%= word.range %>"
 												data-family="<%= word.family %>"
 												data-morph="<%= word.morph %>"
-											>
-												<%= word.word %>
-											</span>
+											><%= word.word %></span>
 						
 										<% }); %>
 									</div>
@@ -542,9 +540,7 @@
 											data-range="<%= word.range %>"
 											data-family="<%= word.family %>"
 											data-morph="<%= word.morph %>"
-										>
-											<%= word.word %>
-										</span>
+										><%= word.word %></span>
 					
 									<% }); %>
 								</div>
