fixing tests and changing the load sequence

--- a/tests.html
+++ b/tests.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet"  href="css/qunit.css" />
+	<script src="js/external/qunit.js"></script>
 	<script data-main="js/javascripture.tests" src="js/external/requirejs/require.js"></script>
 </head> 
 <body> 
