wiring up the advanced search properly and fixing the tests

--- a/index.html
+++ b/index.html
@@ -360,10 +360,10 @@
 					</div>
 
 					<div data-role="fieldcontain">
-						<label for="searchFor">Search for:</label>
-						<select name="searchFor" id="searchFor" data-role="slider">
-							<option value="all">All words</option>
-							<option value="any">Any word</option>
+						<label for="clusivity">Search for:</label>
+						<select name="clusivity" id="clusivity" data-role="slider">
+							<option value="exclusive">All words</option>
+							<option value="inclusive">Any word</option>
 						</select>
 					</div>
 
