making the styles simpler

--- a/index.html
+++ b/index.html
@@ -332,6 +332,9 @@
 				<li>
 					Show original: <input type="checkbox" id="showHebrew" checked />
 				</li>
+				<li>
+					Reading mode: <input type="checkbox" id="readingMode" />
+				</li>
 			</ul>
 		</form>
 	</div>
