fix js hint syntax errors

--- a/index.html
+++ b/index.html
@@ -424,6 +424,7 @@
 <script src="data/crossReferences.js"></script>
 
 
+<script type="text/javascript" src="js/colors.js"></script>
 <script type="text/javascript" src="js/jquery.hoverIntent.min.js"></script>
 <script type="text/javascript" src="js/colorpicker.js"></script>
 <script type="text/javascript" src="js/events.js"></script>
