refactoring data to use one global

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
 		<strong>KJV Usage:</strong> <span class="wordControlPanelKJVDef"></span><br />
 		<strong>Strongs Definition:</strong> <span class="wordControlPanelStrongsDef"></span><br />
 	</div>
-	<a href="#" class="close">x</a>
+	<span aria-hidden="true" class="icon-close close"></span>
 </div>
 
 </body>
@@ -417,6 +417,11 @@
 <script src="js/database.js"></script>-->
 <script type="text/javascript" src="data/bible.js"></script>
 <script type="text/javascript" src="data/strongs-dictionary.js"></script>
+<script>
+	var javascripture = {
+		data: {}
+	};
+</script>
 <script type="text/javascript" src="data/kjvdwyer7.js"></script>
 <script type="text/javascript" src="data/strongsObjectWithFamilies.js"></script>
 <script type="text/javascript" src="data/hebrew6.js"></script>
