adding a loading message for search

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 					<br /><button class="highlight-all">Highlight all</button>
 				</li>-->
 			</ul>
-			<input type="submit" value="search" id="searchLoading" />
+			<input type="submit" value="search" />
 		</form>
 	</div>
 </div>
