--- a/index.html
+++ b/index.html
@@ -185,90 +185,92 @@
 <div id="search-popup" class="popup">
 	<div class="content">
 		<a aria-hidden="true" class="icon-close close-popup"></a>
-		<h2>Search</h2>
-		<form class="search">
-			<ul>
-				<li>
-					<label for="word" class="has-placeholder">Word</label>
-					<input type="text" name="word" id="word" value="" placeholder="Word" />
-				</li>
-			</ul>
-			<ul id="advanced">
-				<li>
-					<label for="lemma" class="has-placeholder">Strongs number</label>
-					<input type="text" name="lemma" id="lemma" value="" placeholder="Strongs number" />
-				</li>
-				<li>
-					<label for="morph" class="has-placeholder">Morphology</label>
-					<input type="text" name="morph" id="morph" value="" placeholder="Morphology" />
-				</li>
-				<li>
-					
-					<!--<div data-role="fieldcontain">
-						<fieldset data-role="controlgroup" class="ui-hide-label">
-							<legend>Combine terms?</legend>
-							<input type="checkbox" name="combineTerms" id="combineTerms" class="custom" />
-							<label for="combineTerms">Combine terms?</label>
-						</fieldset>
-					</div>-->
-					<label for="language">Language:</label>
-					<select name="language" id="language">
-						<option>english</option>
-						<option>hebrew</option>
-						<option>greek</option>
-					</select>
-				</li>
-				<li>
-					<label for="clusivity">Look for</label>
-					<select name="clusivity" id="clusivity">
-						<option value="exclusive">All</option>
-						<option value="inclusive">Any</option>
-					</select>
-					<label for="range">terms in a</label>
-					<select name="range" id="range">
-						<option>word</option>
-						<option selected>verse</option>
-						<option>chapter</option>
-					</select>
-				</li>
-<!--				<li>
-					<label>Search term:</label>
-					<input type="text" value="search" name="searchTerm" id="searchTerm" />
-				</li>
-				<li>
-					<label>Search for:</label>
-					<select id="searchSelect" name="searchSelect">
-						<option value="any">Any</option>
-						<option value="all">All</option>
-					</select>
-				</li>
-				<li>
-					<label>Search language:</label>
-					<select id="searchLanguage" name="searchLanguage">
-						<option value="english">English</option>
-						<option value="hebrew">Hebrew</option>
-					</select>
-				</li>
-				<li>
-					<label>Search range:</label>							
-					<select id="searchRange" name="searchRange">
-						<option value="verse">Verse</option>
-						<option value="chapter">Chapter</option>
-						<option value="book">Book</option>
-					</select>
-				</li>
-				<li>
-					<input type="submit" value="search" name="search" id="search" />
-				</li>
-				<li>
-					<br /><button class="highlight-all">Highlight all</button>
-				</li>-->
-			</ul>
-			<input type="submit" value="Search" />
-			<div class="advanced">
-				<a href="#advanced" class="toggler">Advanced</a>
-			</div>
-		</form>
+		<div class="content-padding">
+			<h2>Search</h2>
+			<form class="search">
+				<ul>
+					<li>
+						<label for="word" class="has-placeholder">Word</label>
+						<input type="text" name="word" id="word" value="" placeholder="Word" />
+					</li>
+				</ul>
+				<ul id="advanced">
+					<li>
+						<label for="lemma" class="has-placeholder">Strongs number</label>
+						<input type="text" name="lemma" id="lemma" value="" placeholder="Strongs number" />
+					</li>
+					<li>
+						<label for="morph" class="has-placeholder">Morphology</label>
+						<input type="text" name="morph" id="morph" value="" placeholder="Morphology" />
+					</li>
+					<li>
+						
+						<!--<div data-role="fieldcontain">
+							<fieldset data-role="controlgroup" class="ui-hide-label">
+								<legend>Combine terms?</legend>
+								<input type="checkbox" name="combineTerms" id="combineTerms" class="custom" />
+								<label for="combineTerms">Combine terms?</label>
+							</fieldset>
+						</div>-->
+						<label for="language">Language:</label>
+						<select name="language" id="language">
+							<option>english</option>
+							<option>hebrew</option>
+							<option>greek</option>
+						</select>
+					</li>
+					<li>
+						<label for="clusivity">Look for</label>
+						<select name="clusivity" id="clusivity">
+							<option value="exclusive">All</option>
+							<option value="inclusive">Any</option>
+						</select>
+						<label for="range">terms in a</label>
+						<select name="range" id="range">
+							<option>word</option>
+							<option selected>verse</option>
+							<option>chapter</option>
+						</select>
+					</li>
+	<!--				<li>
+						<label>Search term:</label>
+						<input type="text" value="search" name="searchTerm" id="searchTerm" />
+					</li>
+					<li>
+						<label>Search for:</label>
+						<select id="searchSelect" name="searchSelect">
+							<option value="any">Any</option>
+							<option value="all">All</option>
+						</select>
+					</li>
+					<li>
+						<label>Search language:</label>
+						<select id="searchLanguage" name="searchLanguage">
+							<option value="english">English</option>
+							<option value="hebrew">Hebrew</option>
+						</select>
+					</li>
+					<li>
+						<label>Search range:</label>							
+						<select id="searchRange" name="searchRange">
+							<option value="verse">Verse</option>
+							<option value="chapter">Chapter</option>
+							<option value="book">Book</option>
+						</select>
+					</li>
+					<li>
+						<input type="submit" value="search" name="search" id="search" />
+					</li>
+					<li>
+						<br /><button class="highlight-all">Highlight all</button>
+					</li>-->
+				</ul>
+				<input type="submit" value="Search" />
+				<div class="advanced">
+					<a href="#advanced" class="toggler">Advanced</a>
+				</div>
+			</form>
+		</div>
 	</div>
 </div>
 
@@ -276,88 +278,94 @@
 <div id="settings-popup" class="popup">
 	<div class="content">
 		<a aria-hidden="true" class="icon-close close-popup"></a>
-		<h2>Settings</h2>
-		<form>
-			<ul>
-				<li>
-					Fonts: <select name="bodyFontFamily" class="changeStyle">
-						<option value="Arial, Helvetica;">Arial</option>
-						<option value="font-family: 'Bookman Old Style';">Bookman Old Style</option>
-						<option value="font-family: 'Courier New', Courier;">Courier</option>
-						<option value="font-family: Georgia;">Georgia</option>
-						<option value="font-family: 'Lucida Sans Unicode', 'Lucida Grande';">Lucida</option>
-						<option value="font-family: 'Times New Roman', Times;">Times</option>
-						<option value="font-family: Verdana, Geneva;">Verdana</option>
-					</select>
-				</li>
-				<li>
-					Font size: <select name="bodyFontSize" class="changeStyle">
-						<option value="font-size: 80%;">80%</option>
-						<option value="font-size: 90%;">90%</option>
-						<option value="font-size: 100%;">100%</option>
-						<option value="font-size: 110%;">110%</option>
-						<option value="font-size: 120%;">120%</option>
-						<option value="font-size: 130%;">130%</option>
-						<option value="font-size: 140%;">140%</option>
-						<option value="font-size: 150%;">150%</option>
-						<option value="font-size: 160%;">160%</option>
-						<option value="font-size: 170%;">170%</option>
-						<option value="font-size: 180%;">180%</option>
-						<option value="font-size: 190%;">190%</option>
-						<option value="font-size: 200%;">200%</option>
-					</select>
-				</li>
-				<li>
-					Colours: <select id="subdueColorBy">
-						<option value="1">Very Bright</option>
-						<option value="1.5" selected="selected">Bright</option>
-						<option value="2">Normal</option>
-						<option value="3">Dark</option>
-						<option value="4">Very Dark</option>
-					</select>
-				</li>
-				<li>
-					<p><input type="checkbox" id="showNotes" />show notes</p>
-				</li>
-				<li>
-					<p><input type="checkbox" id="strictSearch" />strict search</p>
-				</li>
-				<li>
-					Keyboard shortcuts:<br /><br />
-					Chapter &raquo;: <strong>right arrow</strong><br />
-					Verse &raquo;: <strong>down arrow</strong><br />
-					&laquo; Chapter: <strong>left arrow</strong><br />
-					&laquo; Verse: <strong>up arrow</strong><br />
-					Next reference: <strong>n</strong><br />
-					Prev reference: <strong>p</strong><br />
-				</li>
-				<li>
-					Show original: <input type="checkbox" id="showHebrew" checked />
-				</li>
-				<li>
-					Reading mode: <input type="checkbox" id="readingMode" />
-				</li>
-			</ul>
-		</form>
+		<div class="content-padding">
+			<h2>Settings</h2>
+			<form>
+				<ul>
+					<li>
+						Fonts: <select name="bodyFontFamily" class="changeStyle">
+							<option value="Arial, Helvetica;">Arial</option>
+							<option value="font-family: 'Bookman Old Style';">Bookman Old Style</option>
+							<option value="font-family: 'Courier New', Courier;">Courier</option>
+							<option value="font-family: Georgia;">Georgia</option>
+							<option value="font-family: 'Lucida Sans Unicode', 'Lucida Grande';">Lucida</option>
+							<option value="font-family: 'Times New Roman', Times;">Times</option>
+							<option value="font-family: Verdana, Geneva;">Verdana</option>
+						</select>
+					</li>
+					<li>
+						Font size: <select name="bodyFontSize" class="changeStyle">
+							<option value="font-size: 80%;">80%</option>
+							<option value="font-size: 90%;">90%</option>
+							<option value="font-size: 100%;">100%</option>
+							<option value="font-size: 110%;">110%</option>
+							<option value="font-size: 120%;">120%</option>
+							<option value="font-size: 130%;">130%</option>
+							<option value="font-size: 140%;">140%</option>
+							<option value="font-size: 150%;">150%</option>
+							<option value="font-size: 160%;">160%</option>
+							<option value="font-size: 170%;">170%</option>
+							<option value="font-size: 180%;">180%</option>
+							<option value="font-size: 190%;">190%</option>
+							<option value="font-size: 200%;">200%</option>
+						</select>
+					</li>
+					<li>
+						Colours: <select id="subdueColorBy">
+							<option value="1">Very Bright</option>
+							<option value="1.5" selected="selected">Bright</option>
+							<option value="2">Normal</option>
+							<option value="3">Dark</option>
+							<option value="4">Very Dark</option>
+						</select>
+					</li>
+					<li>
+						<p><input type="checkbox" id="showNotes" />show notes</p>
+					</li>
+					<li>
+						<p><input type="checkbox" id="strictSearch" />strict search</p>
+					</li>
+					<li>
+						Keyboard shortcuts:<br /><br />
+						Chapter &raquo;: <strong>right arrow</strong><br />
+						Verse &raquo;: <strong>down arrow</strong><br />
+						&laquo; Chapter: <strong>left arrow</strong><br />
+						&laquo; Verse: <strong>up arrow</strong><br />
+						Next reference: <strong>n</strong><br />
+						Prev reference: <strong>p</strong><br />
+					</li>
+					<li>
+						Show original: <input type="checkbox" id="showHebrew" checked />
+					</li>
+					<li>
+						Reading mode: <input type="checkbox" id="readingMode" />
+					</li>
+				</ul>
+			</form>
+		</div>
 	</div>
 </div>
 <div id="bookmarks-popup" class="popup">
 	<div class="content">
 		<a aria-hidden="true" class="icon-close close-popup"></a>
-		<h2>Bookmarks</h2>
-		<form>
-			<a href="#" class="bookmark">save current passage</a>
-			<br /><br />
-			<ol id="bookmarks"></ol>
-		</form>
+		<div class="content-padding">
+			<h2>Bookmarks</h2>
+			<form>
+				<a href="#" class="bookmark">save current passage</a>
+				<br /><br />
+				<ol id="bookmarks"></ol>
+			</form>
+		</div>
 	</div>
 </div>
 <div id="go-to-popup" class="popup">
 	<div class="content">
 		<a aria-hidden="true" class="icon-close close-popup"></a>
-		<form class="goToReference">
-			<input type="text" id="goToReference" placeholder="Go to reference..." />
-		</form>
+		<div class="content-padding">
+			<form class="goToReference">
+				<input type="text" id="goToReference" placeholder="Go to reference..." />
+			</form>
+		</div>
 	</div>
 </div>
 <!--			<div class="collapsable closed">
