help and keyboard shortcuts

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 			<a href="#settings-popup" class="open-popup" id="keyCode48">Settings</a>
 			<a href="#bookmarks-popup" class="open-popup" id="keyCode66">Bookmarks</a>
 			<a href="#go-to-popup" class="open-popup" id="keyCode71">Go to</a>
+			<a href="#help-popup" class="open-popup">Help</a>
 		</nav>
 	</div>
 
@@ -365,6 +366,25 @@
 			<form class="goToReference">
 				<input type="text" id="goToReference" placeholder="Go to reference..." />
 			</form>
+		</div>
+	</div>
+</div>
+<div id="help-popup" class="popup">
+	<div class="content">
+		<a aria-hidden="true" class="icon-close close-popup"></a>
+		<div class="content-padding">
+			<h2>Help</h2>
+			<ul>
+				<li>To find out about a work, click on it</li>
+				<li>To search for a word, double click it</li>
+			</ul>
+			<p>Keyboard shortcuts</p>
+			<ul>
+				<li>Open search popup: alt then s</li>
+				<li>Open go-to popup: alt then g</li>
+				<li>Next reference: =</li>
+				<li>Previous reference: -</li>
+			</ul>
 		</div>
 	</div>
 </div>
