fix song of songs

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<meta name="google" content="notranslate" />
 		<title>Javascripture</title>
 		<link rel="stylesheet" href="css/layout.css" />
 		<link rel="stylesheet" media="screen" type="text/css" href="css/colorpicker.css" />
@@ -12,6 +13,7 @@
 	<div class="dock">
 		<div class="heading-wrapper">
 			<select id="bookSelect" class="lookup bookSelect" tabindex="1">
+				<option></option>
 				<option value="Genesis">Genesis</option>
 				<option value="Exodus">Exodus</option>
 				<option value="Leviticus">Leviticus</option>
@@ -33,7 +35,7 @@
 				<option value="Psalm">Psalm</option>
 				<option value="Proverbs">Proverbs</option>
 				<option value="Ecclesiastes">Ecclesiastes</option>
-				<option value="Song of songs">Song of Songs</option>
+				<option value="Song of Songs">Song of Songs</option>
 				<option value="Isaiah">Isaiah</option>
 				<option value="Jeremiah">Jeremiah</option>
 				<option value="Lamentations">Lamentations</option>
@@ -115,7 +117,7 @@
 			<a href="#book=Psalm&chapter=1" data-chapters="150">Psalm <span class="chapter"></span></a>
 			<a href="#book=Proverbs&chapter=1" data-chapters="31">Proverbs <span class="chapter"></span></a>
 			<a href="#book=Ecclesiastes&chapter=1" data-chapters="12">Ecclesiastes <span class="chapter"></span></a>
-			<a href="#book=Song Of Songs&chapter=1" data-chapters="8">Song of Songs <span class="chapter"></span></a>
+			<a href="#book=Song of Songs&chapter=1" data-chapters="8">Song of Songs <span class="chapter"></span></a>
 			<a href="#book=Isaiah&chapter=1" data-chapters="66">Isaiah <span class="chapter"></span></a>
 			<a href="#book=Jeremiah&chapter=1" data-chapters="52">Jeremiah <span class="chapter"></span></a>
 			<a href="#book=Lamentation&chapter=1" data-chapters="4">Lamentations <span class="chapter"></span></a>
