--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html manifest="javascripture.appcache">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta name="google" content="notranslate" />
