--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="google" content="notranslate" />
 		<title>Javascripture</title>
 		<link rel="stylesheet" href="css/layout.css" />
-		<link rel="stylesheet" media="screen" type="text/css" href="css/colorpicker.css" />
+<!--		<link rel="stylesheet" media="screen" type="text/css" href="css/colorpicker.css" />-->
 		<style id="bodyFontFamily"></style>
 		<style id="bodyFontSize"></style>
 	</head>
