fix dodgy reference to wrong strongs number in hebrew text

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html manifest="javascripture.appcache">
+<html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<meta name="google" content="notranslate" />
@@ -390,6 +390,7 @@
 				<li>Next reference: =</li>
 				<li>Previous reference: -</li>
 			</ul>
+			<p>Tested in Chrome. Should work everywhere except IE.</p>
 		</div>
 	</div>
 </div>
@@ -445,18 +446,16 @@
 </div>
 
 </body>
-<script type="text/javascript" src="js/jquery-2.0.3.min.js"></script>
+<script type="text/javascript" src="js/jquery-2.0.3.js"></script>
 <script type="text/javascript" src="js/json2.js"></script>
 <script type="text/javascript" src="js/jquery.scrollTo.js"></script>
-<!--<script src="js/lib/jquery.indexeddb.min.js"></script>
-<script src="js/database.js"></script>-->
 <script type="text/javascript" src="data/bible.js"></script>
-<script type="text/javascript" src="data/strongs-dictionary.js"></script>
 <script>
 	var javascripture = {
 		data: {}
 	};
 </script>
+<script type="text/javascript" src="data/strongs-dictionary.js"></script>
 <script type="text/javascript" src="data/kjvdwyer7.js"></script>
 <script type="text/javascript" src="data/strongsObjectWithFamilies.js"></script>
 <script type="text/javascript" src="data/hebrew6.js"></script>
@@ -465,7 +464,6 @@
 
 
 <script type="text/javascript" src="js/colors.js"></script>
-<script type="text/javascript" src="js/jquery.hoverIntent.min.js"></script>
 <script type="text/javascript" src="js/colorpicker.js"></script>
 <script type="text/javascript" src="js/events.js"></script>
 <script type="text/javascript" src="js/functionalScripts.js"></script>
