--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				<option value="2 Corinthians">2 Corinthians</option>
 				<option value="Galatians">Galatians</option>
 				<option value="Ephesians">Ephesians</option>
-				<option value="Philipians">Philipians</option>
+				<option value="Philippians">Philippians</option>
 				<option value="Colossians">Colossians</option>
 				<option value="1 Thessalonians">1 Thessalonians</option>
 				<option value="2 Thessalonians">2 Thessalonians</option>
@@ -145,7 +145,7 @@
 			<a href="#book=2 Corinthians&chapter=1" data-chapters="13">2 Corinthians <span class="chapter"></span></a>
 			<a href="#book=Galatians&chapter=1" data-chapters="6">Galatians <span class="chapter"></span></a>
 			<a href="#book=Ephesians&chapter=1" data-chapters="6">Ephesians <span class="chapter"></span></a>
-			<a href="#book=Philipians&chapter=1" data-chapters="4">Philipians <span class="chapter"></span></a>
+			<a href="#book=Philippians&chapter=1" data-chapters="4">Philippians <span class="chapter"></span></a>
 			<a href="#book=Colossians&chapter=1" data-chapters="4">Colossians <span class="chapter"></span></a>
 			<a href="#book=1 Thessalonians&chapter=1" data-chapters="5">1 Thessalonians <span class="chapter"></span></a>
 			<a href="#book=2 Thessalonians&chapter=1" data-chapters="3">2 Thessalonians <span class="chapter"></span></a>
