adding family to word panel

--- a/index.html
+++ b/index.html
@@ -437,6 +437,7 @@
 		<span class="wordControlPanelStrongsNumber"></span> | <span class="wordControlPanelEnglish"></span> | <span class="wordControlPanelLemma"></span>
 		<div class="word-tree" id="wordTreeRoots"></div>
 		<div class="word-tree" id="wordTreeBranches"></div>
+		<div class="word-tree" id="wordTreeFamily"></div>
 	</div>
 	<div class="definitions">
 		<strong>KJV Usage:</strong> <span class="wordControlPanelKJVDef"></span><br />
