refactoring reference object

--- a/index.html
+++ b/index.html
@@ -474,7 +474,8 @@
 <script type="text/javascript" src="data/bible.js"></script>
 <script>
 	var javascripture = {
-		data: {}
+		data: {},
+		modules: {}
 	};
 </script>
 <script type="text/javascript" src="data/strongs-dictionary.js"></script>
