refactoring to make object live in the javascripture namespace

--- a/index.html
+++ b/index.html
@@ -474,6 +474,7 @@
 <script type="text/javascript" src="data/bible.js"></script>
 <script>
 	var javascripture = {
+		api: {},
 		data: {},
 		modules: {}
 	};
