--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
 <script src="data/crossReferences.js"></script>
 <script src="data/morphology.js"></script>
 
-
+<script src="modules/hebrew.js"></script>
 <script type="text/javascript" src="js/colors.js"></script>
 <script type="text/javascript" src="js/colorpicker.js"></script>
 <script type="text/javascript" src="js/events.js"></script>
